add basic structure in ts

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         Add
       </button>
     </form>
+    <div id="output"></div>
 
     <script type="module" src="/src/panini.ts"></script>
   </body>
